# Vectis

./: .dockerignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: deploy-prod.yml  release.yml
cicd/serverless/: README.md  serverless-compose.yml
docs/: auth_integration.md  cicd_concept.md  deployment.md  design-guide.md  on_prem_agent_architecture.md  prototype_camera_architecture.puml  swagger.yml  vectis_architecture.md  vectis_erd.puml  vectis_package_diagram.puml
scripts/: deploy_pi_camera.sh  start_backend.sh  start_ui.sh  start_website.sh
src/agent/: Dockerfile  README.md  pyproject.toml
src/agent/agent/: __init__.py  backend_client.py  camera_service.py  logging.py  main.py  models.py  runtime_models.py
src/agent/agent/api/: __init__.py  server.py
src/agent/agent/buffer/: __init__.py  ring_buffer.py
src/agent/agent/config/: __init__.py  loader.py  models.py
src/agent/agent/motion/: __init__.py  detector.py
src/agent/agent/queue/: __init__.py  sqlite_queue.py
src/agent/agent/transport/: __init__.py  base.py  http.py
src/agent/agent/video/: __init__.py  pipeline.py
src/agent/config/: agent.example.yaml
src/agent/tests/: test_backend_contract.py  test_config.py  test_motion.py  test_queue.py
src/agent/vectis_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/backend/: Dockerfile  package.json  tsconfig.json
src/pi-camera/: README.md  package.json
src/shared/: package.json
src/webapp/: Dockerfile  index.html  package.json  tsconfig.json  vite.config.ts
(+61 files in other folders)
